--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-cayman
+title: [A person coding using Google Tools]
+description: [Italian guy in love with data analytics, big data and numbers]
+show_downloads: [false]
+google_analytics: [Your Google Analytics tracking ID]
