--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-cayman
 title: A person coding using Google Tools
 description: Italian guy in love with data analytics, big data and numbers
 show_downloads: false
-google_analytics: 
+google_analytics: UA-214953313-1
